# vigilant-disco

./: .gitignore  README.md  dodo.py  manifest.json  pyproject.toml
.ai/: SPEC.md
.github/: copilot-instructions.md
.github/prompts/: python-developer.prompt.md
.github/promts/: ui_developer.prompt.md
anki-frontend/: __init__.py  dodo.py  install_dependencies.sh  pyproject.toml  pytest.ini
anki-frontend/src/: config.md
anki-frontend/src/aicards/: __init__.py  standalone.py  standalone_ui_test.py
anki-frontend/src/aicards/ctx/: ankiconnect.py
anki-frontend/src/aicards/ctx/aicards/: base.py  ui.py
anki-frontend/src/aicards/ctx/aicards/core/: __init__.py
anki-frontend/src/aicards/ctx/aicards/core/ai/: __init__.py  _prompts.py
anki-frontend/src/aicards/ctx/aicards/gui/: __init__.py  _base.py  _export.py  _extraction.py  _llm_dialogue.py  _protonotes.py  anki.py
anki-frontend/src/aicards/misc/: aiutils.py  ankiconnect_client.py  utils.py
anki-frontend/src/aicards/misc/logging/: __init__.py  base.py  core.py  output.py  sentry.py  stdlib.py
anki-frontend/src/aicards/misc/logging/utils/: __init__.py  _span_utils.py
anki-frontend/tests/aicards/ctx/aicards/: core.py  test_core.py  test_gui.py
backend/: main.py  pyproject.toml
resources/: English.apkg
src/: __init__.py  config.py
