[project]
name = "anki-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anki>=25.2.1",
    "pyqt5>=5.15.11",
    "qasync>=0.27.1",
]

[dependency-groups]
dev = [
    "doit>=0.36.0",
    "pytest>=8.3.5",
    "pytest-qasync>=0.0.1",
    "pytest-qt>=4.4.0",
]
