[project]
name = "anki-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioreactive>=0.20.0",
    "anki>=25.2.4",
    "frozendict>=2.4.6",
    "httpx>=0.28.1",
    "openai>=1.78.0",
    "pydantic>=2.11.4",
    "pyqt5>=5.15.11",
    "qasync>=0.27.1",
]

[dependency-groups]
dev = [
    "doit>=0.36.0",
    "pytest>=8.3.5",
    "pytest-qasync>=0.0.1",
    "pytest-qt>=4.4.0",
]
